--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,6 +10,7 @@
 /* Pages */
 @import "pages/main.css";
 @import "pages/list.css";
+@import "pages/addForeign.css";
 
 body {
   font-family: "Noto Sans KR", sans-serif;
