--- a/templates/foreign/univ_list.html
+++ b/templates/foreign/univ_list.html
@@ -8,7 +8,7 @@
     <a href="#{{ key }}" class="lbar_alpha">{{ key }}</a>
     {% endfor %}
     </div>
-    <button class="lgbtn" onclick="location.href='{% url "foreign:univ_search" %}'">학교 추가</button>
+    <button class="lgbtn-gray" onclick="location.href='{% url "foreign:univ_search" %}'">학교 추가</button>
 </div>
     <div>
     {% for key, val in univ_dict.items %}
