TEST-8 Style: d-flex 수정

--- a/static/css/pages/addForeign.css
+++ b/static/css/pages/addForeign.css
@@ -1,6 +1,5 @@
 .containers {
   width: 1040px; /*container로 바꾸기*/
-  transform: translate(50%, 0);
   font-size: 15px;
 }
 
@@ -37,6 +36,7 @@
 }
 .space-between {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   margin-top: 40px;
   margin-bottom: 40px;
