--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,7 @@
 @import "pages/main.css";
 @import "pages/list.css";
 @import "pages/addForeign.css";
+@import "pages/foreignReview.css";
 @import "pages/login.css";
 @import "pages/signup.css";
 @import "pages/certificate.css";
