--- a/static/css/pages/list.css
+++ b/static/css/pages/list.css
@@ -41,7 +41,7 @@
   height: 28px;
   font-size: 14px;
   border-radius: 21px;
-  background-color: var(--m-gray);
+  background-color: var(--l-gray);
   border: none;
 }
 
@@ -50,7 +50,7 @@
   height: 30px;
   border-radius: 15px;
   color: black;
-  background-color: var(--m-gray);
+  background-color: var(--l-gray);
   text-align: center;
   vertical-align: middle;
   line-height: 30px;
