--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,7 @@
 @import "pages/signup.css";
 @import "pages/certificate.css";
 @import "pages/myquestion.css";
+@import "pages/qna.css";
 
 body {
   font-family: "Noto Sans KR", sans-serif;
