--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,10 @@
 /* Components */
 @import "components/header.css";
 @import "components/button.css";
-
+@import "components/post_list.css";
+@import "components/post.css";
+@import "components/comment.css";
+@import "components/undercomment.css";
 /* Pages */
 @import "pages/main.css";
 @import "pages/list.css";
@@ -17,7 +20,6 @@
 @import "pages/signup.css";
 @import "pages/certificate.css";
 @import "pages/myquestion.css";
-@import "pages/qna.css";
 
 body {
   font-family: "Noto Sans KR", sans-serif;
