--- a/templates/country/wiki_edit.html
+++ b/templates/country/wiki_edit.html
@@ -1,13 +1,12 @@
 {%extends "country/country_base.html"%}
 {%block contents%}
-<div style="width:750px;">
+<div class="container category-detail">
     <div class="d-flex justify-content-between ">
         <div class="d-flex align-items-center ">
-            <h1>{{country.country_name}}</h1>
-            <span>위키</span>
+            <h3>{{country.country_name}}</h3>
         </div>
     </div>
-
+    <hr />
 
         <form action="" method="POST" enctype="multipart/form-data" class="table">
             {% csrf_token %}
