--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,6 +7,7 @@
 /* Components */
 @import "components/header.css";
 @import "components/button.css";
+@import "components/detail.css";
 
 /* Pages */
 @import "pages/main.css";
