--- a/templates/country/comment_form.html
+++ b/templates/country/comment_form.html
@@ -1,10 +1,10 @@
 {%extends "country/country_base.html"%} 
 
 {%block contents%}
-<div style="width: 750px">
+<div class="container category-detail">
   <div class="d-flex justify-content-between">
     <div class="d-flex align-items-center">
-      <h1>{{country.country_name}}</h1>
+      <h3>{{country.country_name}}</h3>
       <span>학교 목록</span>
     </div>
   </div>
