--- a/templates/country/question_form.html
+++ b/templates/country/question_form.html
@@ -1,13 +1,12 @@
 {%extends "country/country_base.html"%} {% block contents %}
 
-<div style="width: 750px">
-  <div class="d-flex justify-content-between">
+<div class="container category-detail">
+  <div class="d-flex justify-content-between align-items-end">
     <div class="d-flex align-items-center">
-      <h1>{{ country.country_name }}</h1>
-      <span>QnA</span>
+      <h3>{{ country.country_name }}</h3>
     </div>
     <button
-      class="btn btn-sm btn-border"
+      class="blue-button create-btn"
       onclick="canIPost('{{ is_authenticated }}')"
     >
       글쓰기
