--- a/templates/country/question_list.html
+++ b/templates/country/question_list.html
@@ -2,20 +2,21 @@
 {% block contents %}
 
     
-    <div style="width:750px;">
-        <div class="d-flex justify-content-between ">
-            <div class="d-flex align-items-center ">
-                <h1>{{ country.country_name }}</h1>
-                <span>QnA</span>
+    <div class="container category-detail">
+        <div class="d-flex justify-content-between align-items-end">
+            <div class="d-flex align-items-center">
+                <h3>{{ country.country_name }}</h3>
             </div>
-            <button class="btn btn-sm btn-border" onclick="canIPost('{{ is_authenticated }}')"> 글쓰기 </button>
+            <div class="d-flex align-items-center" style="height: 28px">
+                <form class="d-flex justify-content-center" action="{% url 'country:question_search' country.pk %}" method="post">
+                    {% csrf_token %}
+                    <input class="" placeholder="검색" name="q" value="{{q}}">
+                    <button class="" type="submit">검색</button>
+                </form>
+                <button class="light-button create-btn" onclick="canIPost('{{ is_authenticated }}')"> 글쓰기 </button>
+            </div>
         </div>
         <hr>
-        <form class="d-flex justify-content-center" action="{% url 'country:question_search' country.pk %}" method="post">
-            {% csrf_token %}
-            <input class="col-9" placeholder="검색" name="q" value="{{q}}">
-            <button class="btn btn-outline-success" type="submit">검색</button>
-        </form>
         <table>
             <tr align='center'>
                 <th width='50'>번호</th>
