--- a/templates/country/question_search.html
+++ b/templates/country/question_search.html
@@ -2,13 +2,12 @@
 {% block contents %}
 
     
-    <div style="width:750px;">
-        <div class="d-flex justify-content-between ">
+    <div class="container category-detail">
+        <div class="d-flex justify-content-between align-items-end">
             <div class="d-flex align-items-center ">
-                <h1>{{ country.country_name }}</h1>
-                <span>QnA</span>
+                <h3>{{ country.country_name }}</h3>
             </div>
-            <button class="btn btn-sm btn-border" onclick="canIPost('{{ is_authenticated }}')"> 글쓰기 </button>
+            <button class="light-button create-btn" onclick="canIPost('{{ is_authenticated }}')"> 글쓰기 </button>
         </div>
         <hr>
         <form class="d-flex justify-content-center" action="{% url 'country:question_search' country.pk %}" method="post">
