--- a/static/css/components/button.css
+++ b/static/css/components/button.css
@@ -12,3 +12,10 @@
   color: var(--d-gray);
   background-color: var(--l-gray);
 }
+
+.m-btn {
+  font-size: 14px;
+  padding: 7px 11px;
+  border: none;
+  border-radius: 15px;
+}
