--- a/templates/login/main.html
+++ b/templates/login/main.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <main class="main__img d-flex flex-column justify-content-center">
-    <div class="text main-title">
+    <div class="text main-title righteous">
         UNI<br>
         CONNECT
     </div>
@@ -15,12 +15,59 @@
 </main>
 
 <section class="main__intro d-flex align-items-center justify-content-center">
-    <div class="quotation-mark">"</div>
+    <div class="quotation-mark righteous">"</div>
     <div class="text">
         세상 제일 멋지고 귀여운<br>
         유니커넥트 팀원들을 소개합니다~!
     </div>
-    <div class="quotation-mark">"</div>
+    <div class="quotation-mark righteous">"</div>
+</section>
+
+<section class="main__team d-flex flex-column align-items-center justify-content-center">
+    <div class="righteous team-title">Team</div>
+    <div class="profile-set d-flex justify-content-between">
+        <div class="profile-card d-flex align-items-center">
+            <img src="/static/css/img/profile_img_1.png" alt="민지프로필">
+            <div>
+                <span class="p-position">대장</span>
+                <span class="p-name">곽민지</span>
+                <div class="p-border"></div>
+                <p class="p-content">많이 부족한 코린이 팀장 👻<br>
+                    교환학생 경험을 바탕으로 열심히 만들었습니다.</p>
+            </div>
+        </div>
+        <div class="profile-card d-flex align-items-center">
+            <img src="/static/css/img/profile_img_2.png" alt="민지프로필">
+            <div>
+                <span class="p-position">엇 잠시만..</span>
+                <span class="p-name">김경린</span>
+                <div class="p-border"></div>
+                <p class="p-content">유니커넥트에서 '엇..잠시만..'를 맡고 있습니다 😁<br>
+                    뚝딱뚝딱하다 보니 이렇게 멋지게 완성되었네요.</p>
+            </div>
+        </div>
+        <div class="profile-card d-flex align-items-center">
+            <img src="/static/css/img/profile_img_3.png" alt="민지프로필">
+            <div>
+                <span class="p-position">멋쟁이</span>
+                <span class="p-name">양정연</span>
+                <div class="p-border"></div>
+                <p class="p-content">코딩 배우러 들어온 동아리에서 디자인하기🤪~<br>
+                    좋은 팀원들 만나 호강하고 갑니다!</p>
+            </div>
+        </div>
+        <div class="profile-card d-flex align-items-center">
+            <img src="/static/css/img/profile_img_4.png" alt="민지프로필">
+            <div>
+                <span class="p-position">막내</span>
+                <span class="p-name">김지민</span>
+                <div class="p-border"></div>
+                <p class="p-content">안녕하세요 김지민입니다<br>
+                    좋은 팀원들과 함께 열심히 만들었습니다</p>
+            </div>
+        </div>
+        
+    </div>
 </section>
 
 {% endblock %}
